modules/wycs/tests/valid/test_arith_17.wyal
assert:
  forall (int x, int y, int z):
    z == x - y && 0 <= x - y ==> 0 <= z