modules/wycs/tests/invalid/test_012.wyal
assert: 
  forall(int x, int y):
    (x == y % 2) ==> x > 0
